--- a/ecommerce-api/Gemfile
+++ b/ecommerce-api/Gemfile
@@ -10,8 +10,15 @@ gem 'bootsnap', '>= 1.4.2', require: false
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 4.1'
 
+# Project Specific
+
 # Auth
 gem 'devise_token_auth', '~> 1.1.4'
+
+# E-mail responsive
+gem 'inky-rb', '~> 1.3', '>= 1.3.8.0', require: 'inky'
+gem 'premailer-rails', '~> 1.11', '>= 1.11.1'
+gem 'sassc-rails', '~> 2.1', '>= 2.1.2'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
