--- a/ecommerce-api/Gemfile
+++ b/ecommerce-api/Gemfile
@@ -11,9 +11,11 @@ gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 4.1'
 
 # Project Specific
-
 # Auth
 gem 'devise_token_auth', '~> 1.1.4'
+
+# CORS
+gem 'rack-cors', '~> 1.1.1'
 
 # E-mail responsive
 gem 'inky-rb', '~> 1.3', '>= 1.3.8.0', require: 'inky'
