--- a/ecommerce-api/Gemfile
+++ b/ecommerce-api/Gemfile
@@ -24,6 +24,10 @@ gem 'sassc-rails', '~> 2.1', '>= 2.1.2'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'factory_bot_rails'
+  gem 'faker'
+  gem 'rspec-rails', '~> 4.0.1'
+  gem 'shoulda-matchers', '~> 4.0'
 end
 
 group :development do
